--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,21 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activities.MainActivity"
+            android:name="fourheads.org.gestionescuelaandroid.activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.ServiceListActivity"
+            android:name="fourheads.org.gestionescuelaandroid.activities.ServiceListActivity"
             android:label="@string/title_activity_service_list" >
             <intent-filter>
                 <action android:name="android.intent.action.SERVICE_LIST" />
@@ -32,10 +40,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.ActionsListActivity"
+            android:name="fourheads.org.gestionescuelaandroid.activities.ActionsListActivity"
             android:label="@string/title_activity_actions_list" >
             <intent-filter>
                 <action android:name="android.intent.action.ACTION_LIST" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="fourheads.org.gestionescuelaandroid.activities.AlumnosListActivity"
+            android:label="@string/title_activity_students_list" >
+            <intent-filter>
+                <action android:name="android.intent.action.ALUMNO_LIST" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
